<resources>
    <string name="app_name">Finančný Kontrolór</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="graph">Graf</string>
    <string name="add_data">Pridať</string>
    <string name="show_data">Zobraziť</string>
    <string name="settings">Nastavenia</string>
    <string name="aboutFragment">O nás</string>

    <string name="id_data">ID</string>
    <string name="amount">Suma</string>
    <string name="date">Dátum</string>
    <string name="description">Popis</string>
    <string name="type">Typ</string>
    <string name="income">Príjem</string>
    <string name="expense">Výdavky</string>
    <string name="category">Kategória</string>

    <string name="error">Chyba</string>
    <string name="error_message">
        Nastala chyba, skontrolujte si
        \n - Suma je zadaná
        \n - Dátum je v správnom formáte
        \n - Kategória je zadaná</string>
    <string name="info">Info</string>
    <string name="reinitialization_message">
        Reinicializácia prebehla úspešne
    </string>
    <string name="ok">OK</string>

    <string name="date_format">DD/MM/YYYY hh:mm:ss</string>
    <string name="amount_format">0.00</string>
    <string name="currency">€</string>
    <string name="delete_data_message">Naozaj chceš vymazať tieto údaje?</string>
    <string name="delete_data">Vymazať údaje</string>
    <string name="no_description">(Popis nebol zadaný)</string>
    <string name="initialization_message" />
    <string name="from_date">Od</string>
    <string name="to_date">Do</string>
    <string name="date_format2">DD/MM/YYYY</string>


</resources>