<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mainFragment"
            android:icon="@drawable/ic_home_page_24"
            android:title="@string/graph" />

        <item
            android:id="@+id/addDataFragment"
            android:icon="@drawable/ic_add_data_24"
            android:title="@string/add_data" />

        <item
            android:id="@+id/showDataFragment"
            android:icon="@drawable/ic_show_data_24"
            android:title="@string/show_data" />


        <!-- TODO: Ak sa nezadari vymazat, ak zadarí upraviť ikony -->
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_edit_data_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_delete_data_24"
            android:title="@string/aboutFragment" />
    </group>
</menu>