<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.settingsFragment.SettingsFragment">

        <TextView
            android:id="@+id/textSetAmount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/amount" />

        <TextView
            android:id="@+id/textSetType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type" />

        <TextView
            android:id="@+id/textSetCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category" />

        <TextView
            android:id="@+id/textSetDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/date" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />

    </FrameLayout>
</layout>