<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25sp"
        tools:context=".fragments.mainFragment.MainFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="82dp">

            <TextView
                android:id="@+id/from_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/from_date"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/to_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="44dp"
                android:text="@string/to_date"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/dates_button"
                android:layout_width="102dp"
                android:layout_height="37dp"
                android:layout_marginEnd="4dp"
                android:text="@string/ok"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editFromDate"
                android:layout_width="168dp"
                android:layout_height="36dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/date_format2"
                android:textSize="12dp"
                android:inputType="date"
                app:layout_constraintStart_toEndOf="@+id/from_date"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editToDate"
                android:layout_width="168dp"
                android:layout_height="36dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="4dp"
                android:ems="10"
                android:hint="@string/date_format2"
                android:inputType="date"
                android:textSize="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/to_date" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="581dp"
            android:layout_marginTop="100dp">

            <com.androidplot.pie.PieChart
                android:id="@+id/graph"
                style="@style/APDefacto.Light"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>

    </FrameLayout>
</layout>