<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25sp"
        tools:context=".fragments.addDataFragment.AddDataFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutForText"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="150dp">

            <TextView
                android:id="@+id/textAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/amount"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/type"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textAmount" />

            <TextView
                android:id="@+id/textCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/category"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textType" />

            <TextView
                android:id="@+id/textDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/date"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textCategory" />

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:text="@string/description"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDate" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutForEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="130dp"
            android:layout_marginBottom="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:autofillHints="0.00"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="@string/amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.476"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/type"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="33dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.312"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editAmount">

                <RadioButton
                    android:id="@+id/expense"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/expense" />

                <RadioButton
                    android:id="@+id/income"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:text="@string/income" />

            </RadioGroup>

            <Spinner
                android:id="@+id/category"
                android:layout_width="229dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/type" />

            <EditText
                android:id="@+id/editDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:ems="10"
                android:inputType="date|time"
                android:text="DD.MM.YYYY HH:MM:SS"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category" />

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:maxLength="150"
                android:text="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.523"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editDate" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutForButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="540dp">

            <ImageButton
                android:id="@+id/saveDataButton"
                android:layout_width="70dp"
                android:layout_height="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:src="@drawable/ic_save_data_96"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/deleteDataButton" />

            <ImageButton
                android:id="@+id/deleteDataButton"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:src="@drawable/ic_delete_data_96"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageButton
                android:id="@+id/againDataButton"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:src="@drawable/ic_again_96"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/saveDataButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>